Concord flora template edits.
The help section is relevant to Concord now. (#392)

--- a/gobotany/site/templates/concord/contact.html
+++ b/gobotany/site/templates/concord/contact.html
@@ -13,9 +13,15 @@
 {% block main_content %}
     <h1>Contact Us</h1>
 
-    <p>Would you like to find out more about the project? Report
-    a bug or erroneous data? We'd like to know!</p>
+	<h2>Email Us</h2>
+    <ul>
+		<li>Would you like to find out more about the project?</li>
+		<li>Report a bug or erroneous data?</li>
+		<li>Find out how about customized versions of Go Botany?</li>
+		<li>We'd like to know!</li>
     
+	</ul>
+	
     <p>Send us an 
         email at
         <a class="email">gobotany [at] newenglandwild [dot] org</a>.</p>
