--- a/gobotany/site/templates/concord/about.html
+++ b/gobotany/site/templates/concord/about.html
@@ -29,24 +29,28 @@
         species published in the last 25 years.</li>
     </ul>
 
-    <h2>Go Botany Toolkit</h2>
+    <h2>Concord Flora</h2>
         
     <img src="/static/images/layout/about_page_photo1.jpg"
         alt="Two people inspecting and photographing a plant in the woods">
         
     <ul>
-        <li>Our <a href="{% url 'level1' 'simple' %}">Simple Key</a> is an interactive
-        key to 1,200 species. Answer some questions to narrow down to the plant
-        you want to identify. <a href="{% url 'level1' 'simple' %}">Get Started!</a>
+        <li>The Go Botany Concord Flora
+		<a href="{% url 'level1' 'simple' %}">Simple Key</a> is an interactive
+        key to 1,200 species in Concord, Massachusetts. Answer some questions
+	 	to narrow down to the plant you want to identify. 
+		<a href="{% url 'level1' 'simple' %}">Get Started!</a>
         </li>
-        <li>Using our <a href="{% url 'advanced-id-tools' %}">Advanced Key</a> 
-        tools, you can use traditional dichotomous keys to identify genera 
-        within families and species within genera, and more than 3,500 species,
-        subspecies and varieties of plants.</li>
         <li>Learn about the habitats, characteristics, and uses of plants, 
         view photos and maps of its distribution, and much more.</li>
+		<li>The Concord Flora is a <a href="contact/">customized version</a> of Go Botany. To learn about
+		all of the plants of New England, visit the main 
+		<a href="http://gobotany.newenglandwild.org/" target="_blank">Go Botany</a>
+		web site.</li>
+		
     </ul>
-            
+
+	{% comment %}
     <h2>Resources for Teachers</h2>
         
     <img src="/static/images/layout/about_page_photo2.jpg"
@@ -73,6 +77,7 @@
         training for educators throughout New England on how to use Go
         Botany.</li>
     </ul>
+	{% endcomment %}
 {% endblock %}
 
 {% block sidebar_content %}
