Concord flora templates.
Fixed typos on the contact page. (#392)

--- a/gobotany/site/templates/concord/contact.html
+++ b/gobotany/site/templates/concord/contact.html
@@ -13,13 +13,13 @@
 {% block main_content %}
     <h1>Contact Us</h1>
 
-	<h2>Email Us</h2>
+	<h2>Email</h2>
+
     <ul>
 		<li>Would you like to find out more about the project?</li>
 		<li>Report a bug or erroneous data?</li>
-		<li>Find out how about customized versions of Go Botany?</li>
+		<li>Find out about customized versions of Go Botany?</li>
 		<li>We'd like to know!</li>
-    
 	</ul>
 	
     <p>Send us an 
