Concord flora template edits.
Links on home page open in a new window. Fixed bad link on about
page. (#392)

--- a/gobotany/site/templates/concord/about.html
+++ b/gobotany/site/templates/concord/about.html
@@ -43,7 +43,7 @@
         </li>
         <li>Learn about the habitats, characteristics, and uses of plants, 
         view photos and maps of its distribution, and much more.</li>
-		<li>The Concord Flora is a <a href="contact/">customized version</a> of Go Botany. To learn about
+		<li>The Concord Flora is a <a href="/contact/">customized version</a> of Go Botany. To learn about
 		all of the plants of New England, visit the main 
 		<a href="http://gobotany.newenglandwild.org/" target="_blank">Go Botany</a>
 		web site.</li>
