--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -82,17 +82,20 @@
                 comprehensive list of the <b>plants of Concord,
                 Massachusetts</b>, and is a customized version of Go Botany.
                 To learn about all of the plants of New England, visit the main
-                <a href="http://gobotany.newenglandwild.org/">Go Botany</a>
+                <a href="http://gobotany.newenglandwild.org/" 
+					target="_blank">Go Botany</a>
                 web site.</p>
 
-                <p><a href="http://www.ray-a.com/">Ray Angelo</a> former 
+                <p><a href="http://www.ray-a.com/" 
+					target="_blank">Ray Angelo</a> former 
 				Curator of Vascular Plants for the New England Botanical Club, 
 				kindly provided the list of Concord plants, with additional 
 				contributions by Bryan Connolly, Massachusetts State Botanist,
 				and Charles Davis, Curator of Vascular Plants at Harvard University 
 				Department of Organismic and Evolutionary Biology. The nomenclature
 				is from 
-				<a href="http://www.newenglandwild.org/store/flora-novae-angliae/">Flora
+				<a href="http://www.newenglandwild.org/store/flora-novae-angliae/"
+				target="_blank">Flora
                 Novae Angliae</a> by Arthur Haines, Research Botanist at
                 New England Wild Flower Society.</p>
             </div>
