Clarify list on the Concord Contact page. (#392)

--- a/gobotany/site/templates/concord/contact.html
+++ b/gobotany/site/templates/concord/contact.html
@@ -14,15 +14,15 @@
     <h1>Contact Us</h1>
 
 	<h2>Email</h2>
-
+    
+    <p>Would you like to:</p>
     <ul>
-		<li>Would you like to find out more about the project?</li>
+		<li>Find out more about the project?</li>
 		<li>Report a bug or erroneous data?</li>
 		<li>Find out about customized versions of Go Botany?</li>
-		<li>We'd like to know!</li>
 	</ul>
 	
-    <p>Send us an 
+    <p>We'd like to know! Send us an 
         email at
         <a class="email">gobotany [at] newenglandwild [dot] org</a>.</p>
 
