Avoid opening links in new browser windows.
The one place where this is tempting is the Terms link atop the
lightboxed photos, but the inconvenience of having to open one's
photo again after pressing back seems minor. If the new window
link there is really missed perhaps we can warn the user with
an icon or label.

--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -83,11 +83,11 @@
                 Massachusetts</b>, and is a customized version of Go Botany.
                 To learn about all of the plants of New England, visit the main
                 <a href="http://gobotany.newenglandwild.org/" 
-					target="_blank">Go Botany</a>
+					>Go Botany</a>
                 web site.</p>
 
                 <p><a href="http://www.ray-a.com/" 
-					target="_blank">Ray Angelo</a> former 
+					>Ray Angelo</a> former 
 				Curator of Vascular Plants for the New England Botanical Club, 
 				kindly provided the list of Concord plants, with additional 
 				contributions by Bryan Connolly, Massachusetts State Botanist,
@@ -95,7 +95,7 @@
 				Department of Organismic and Evolutionary Biology. The nomenclature
 				is from 
 				<a href="http://www.newenglandwild.org/store/flora-novae-angliae/"
-				target="_blank">Flora
+				>Flora
                 Novae Angliae</a> by Arthur Haines, Research Botanist at
                 New England Wild Flower Society.</p>
             </div>
