--- a/gobotany/site/templates/gobotany/_footer.html
+++ b/gobotany/site/templates/gobotany/_footer.html
@@ -29,7 +29,7 @@
                     <p>The Go Botany project is supported in part by the 
                         National Science Foundation.<br><a
                             href="http://www.nsf.gov"
-                            target="_blank">www.nsf.gov</a></p>
+                            >www.nsf.gov</a></p>
                 </div>
             </div>
         </footer>
