--- a/gobotany/site/templates/gobotany/advanced.html
+++ b/gobotany/site/templates/gobotany/advanced.html
@@ -54,7 +54,7 @@
                                 </ul>
                                 <p>The key is based on the <a
                                     href="http://newenglandwild.org/store/flora-novae-angliae"
-                                    target="_blank">Flora Novae Angliae</a> (Haines
+                                    >Flora Novae Angliae</a> (Haines
                                 2011).</p>
                             </section>
                             <a href="{% url 'dkey' %}"
