--- a/gobotany/site/templates/gobotany/about.html
+++ b/gobotany/site/templates/gobotany/about.html
@@ -20,11 +20,11 @@
     <ul>
         <li>Go Botany is a four-year project funded by the 
         <a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0840186" 
-            target="_blank">National Science Foundation</a>.</li>
+            >National Science Foundation</a>.</li>
         <li>This web-based project builds on the Flora Novae Angliae
         by Arthur Haines (available at the <a
             href="http://www.newenglandwild.org/store/flora-novae-angliae"
-            target="_blank">Garden Shop</a>), the first
+            >Garden Shop</a>), the first
         comprehensive scientific reference on the region's plant
         species published in the last 25 years.</li>
     </ul>
@@ -60,10 +60,10 @@
         curricula, lab modules, and field workshops using Go Botany.</li>
         <li>New England Wild Flower Society is teaming up with three partners,
         <a href="http://www.montshire.org/"
-            target="_blank">Montshire Museum of Science</a>, <a
-            href="http://peabody.yale.edu/" target="_blank">Yale Peabody 
+            >Montshire Museum of Science</a>, <a
+            href="http://peabody.yale.edu/">Yale Peabody 
             Museum of Natural History</a>, and the 
-        <a href="http://www.chewonki.org/" target="_blank">Chewonki 
+        <a href="http://www.chewonki.org/">Chewonki 
             Foundation</a> to create customized floras, educational displays,
         and teaching tools!</li>
         <li>Share your ideas with other educators using 
