Avoid opening links in new windows on Teaching page.
Missed this page when searching earlier.

--- a/gobotany/site/templates/gobotany/teaching.html
+++ b/gobotany/site/templates/gobotany/teaching.html
@@ -34,7 +34,7 @@
     <p class="new">New</p>
     <h3><a
         href="/static/docs/Go-Botany-Quiz-Cards.pdf"
-        target="blank">Go Botany Plant Quiz Cards</a></h3>
+        >Go Botany Plant Quiz Cards</a></h3>
     <p class="meta">PDF, 1.7 MB. Posted March 2013</p>
     <p>
     Practice your identification skills with these handy plant quiz cards!
@@ -50,7 +50,7 @@
     <li>
     <h3><a
         href="/static/docs/new-england-science-frameworks.pdf"
-        target="blank">New England Science Frameworks</a></h3>
+        >New England Science Frameworks</a></h3>
     <p class="meta">PDF, 979 kB. Posted November 2012</p>
     <p>
     James Sirch of the <a href="http://peabody.yale.edu/">Yale Peabody
@@ -65,7 +65,7 @@
     <li>
     <h3><a
         href="/static/docs/gobotany-plant-id-form.docx"
-        target="blank">Go Botany Plant Identification Form</a></h3>
+        >Go Botany Plant Identification Form</a></h3>
     <p class="meta">Microsoft Word document, 37 kB. Posted November 2012</p>
     <p>
     Here is a handy form that your students can take with them in the field
@@ -83,7 +83,7 @@
     <li>
     <h3><a
         href="/static/docs/books-for-kids-about-wildflowers.pdf"
-        target="blank">Bibliography of Children&#8217;s Books on
+        >Bibliography of Children&#8217;s Books on
         the Subject of Botany
 </a></h3>
     <p class="meta">PDF, 201 kB. Posted May 2012</p>
@@ -92,7 +92,7 @@
     information on the age groups to which these books will appeal. Many
     thanks to Anne Dannenberg, Director of the 
     <a href="http://www.huntingtonpubliclibrary.org/"
-        target="blank">Huntington Public Library</a> in Huntington, Vermont
+        >Huntington Public Library</a> in Huntington, Vermont
     for compiling this useful bibliography!</p>
     </li>
 
