Added Dan, Greg, and Partners to contributors.

--- a/gobotany/site/templates/gobotany/contributors.html
+++ b/gobotany/site/templates/gobotany/contributors.html
@@ -19,6 +19,7 @@
         <li>Bill Brumback</li>
         <li>Elizabeth Farnsworth</li>
         <li>Arthur Haines</li>
+		<li>Greg Lowenberg</li>
     </ul>
 
     <h2>Botanical Data Management</h2>
@@ -28,6 +29,7 @@
         <li>Marybeth Hanley</li>
         <li>Sid Koul</li>
         <li>William Moorhead</li>
+		<li>Dan Scharfman</li>
         <li>Tristrum Seidler</li>
     </ul>
 
@@ -63,6 +65,15 @@
     <h2>Photography</h2>
 
     <p>Credits appear with the photos throughout the site.</p>
+	
+	<h2>Project Partners</h2>
+	
+	<ul>
+		<li>Don Hudson, Chewonki Foundation</li>
+		<li>Bob Raiselis, Montshire Museum of Science</li>
+		<li>James Sirch, Yale Peabody Museum of Natural History</li>
+		<li>Dennis Whigham, North American Orchid Conservation Center</li>
+	</ul>
 
 {% endblock %}
 
