--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -87,7 +87,7 @@
                 web site.</p>
 
                 <p><a href="http://www.ray-a.com/" 
-					>Ray Angelo</a> former 
+					>Ray Angelo</a>, former 
 				Curator of Vascular Plants for the New England Botanical Club, 
 				kindly provided the list of Concord plants, with additional 
 				contributions by Bryan Connolly, Massachusetts State Botanist,
