Edit Concord intro text to prevent orphan on desktops and tablets. (#392)

--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -89,7 +89,7 @@
                 <p><a href="http://www.ray-a.com/" 
 					>Ray Angelo</a>, former 
 				Curator of Vascular Plants for the New England Botanical Club, 
-				kindly provided the list of Concord plants, with additional 
+				kindly provided the list of Concord plants, with further 
 				contributions by Bryan Connolly, Massachusetts State Botanist,
 				and Charles Davis, Curator of Vascular Plants at Harvard University 
 				Department of Organismic and Evolutionary Biology. The nomenclature
