--- a/gobotany/simplekey/templates/gobotany/results.html
+++ b/gobotany/simplekey/templates/gobotany/results.html
@@ -87,16 +87,13 @@
                         <a href="{% url 'site-getting-started' %}"
                             class="get-help-btn left">Get Help</a>
                     </div>
-
                 </div>
-
-
 
                 <div class="working-area" aria-live="polite" 
                     aria-relevant="additions removals">
                     <img class="arrow" alt=""
                         src="/static/images/layout/working-area-arrow.png">
-                    <a href="#" class="close"></a>
+                    <a class="close"></a>
 
                     <h4 class="question"></h4>
                     <div>
@@ -105,7 +102,7 @@
                             <div class="hint"></div>
                             <div class="values"></div>
                             <div class="actions">
-                              <a class="apply-btn" href="#">Apply</a>
+                              <a class="apply-btn">Apply</a>
                             </div>
                         </div>
                         <div class="terms none closed">
