--- a/gobotany/simplekey/templates/partner/results.html
+++ b/gobotany/simplekey/templates/partner/results.html
@@ -96,7 +96,7 @@
                     aria-relevant="additions removals">
                     <img class="arrow" alt=""
                         src="/static/images/layout/working-area-arrow.png">
-                    <a href="#" class="close"></a>
+                    <a class="close"></a>
 
                     <h4 class="question"></h4>
                     <div>
@@ -105,7 +105,7 @@
                             <div class="hint"></div>
                             <div class="values"></div>
                             <div class="actions">
-                              <a class="apply-btn" href="#">Apply</a>
+                              <a class="apply-btn">Apply</a>
                             </div>
                         </div>
                         <div class="terms none closed">
