--- a/gobotany/static/sass/_site-media-queries.scss
+++ b/gobotany/static/sass/_site-media-queries.scss
@@ -11,6 +11,11 @@
 
 $search-suggest-menu-top: 83px;
 
+@mixin nav-current-section {
+    background-color: $smallscreen-current-section-color;
+    color: #000;
+}
+
 /* Portrait-orientation styles */
 @media only screen and (max-width: 400px) {
     body, header .container, .content .container, footer .container {
@@ -84,37 +89,37 @@ $search-suggest-menu-top: 83px;
                 top: $search-suggest-menu-top;
             }
             footer .navigation ul.sections li.home a {
-                background-color: $smallscreen-current-section-color;
+                @include nav-current-section;
             }
         }
         &.simple {
             footer .navigation ul.sections li.simple a {
-                background-color: $smallscreen-current-section-color;
+                @include nav-current-section;
             }
         }
         &.plantshare {
             footer .navigation ul.sections li.plantshare a {
-                background-color: $smallscreen-current-section-color;
+                @include nav-current-section;
             }
         }
         &.full {
             footer .navigation ul.sections li.full a {
-                background-color: $smallscreen-current-section-color;
+                @include nav-current-section;
             }
         }
         &.dkey {
             footer .navigation ul.sections li.dkey a {
-                background-color: $smallscreen-current-section-color;
+                @include nav-current-section;
             }
         }
         &.teaching {
             footer .navigation ul.sections li.teaching a {
-                background-color: $smallscreen-current-section-color;
+                @include nav-current-section;
             }
         }
         &.help {
             footer .navigation ul.sections li.help a {
-                background-color: $smallscreen-current-section-color;
+                @include nav-current-section;
             }
         }
     }
