Tighten partner site home page layout on small screens.
Reduce extra space between the first and second sections. (#396)

--- a/gobotany/static/sass/_partnersites.scss
+++ b/gobotany/static/sass/_partnersites.scss
@@ -83,6 +83,10 @@ header.partner-site {
                 width: 200px;
             }
         }
+        .three-col {
+            height: 0;
+            margin-bottom: 0;
+        }
     }
     header.partner-site {
         .container {
