--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1545,6 +1545,7 @@ header.partner-site nav li a { padding: 5px 32px 0; /* fewer sections, more hori
 /* These styles are common to both smartphone widths */
 @media only screen and (max-width: 600px) { #home.partner-site header.partner-site h1 { background-position: -58px -17px; height: 56px; margin-left: 0; width: 200px; }
   #home.partner-site header.partner-site .site-name { font-size: 14px; left: 43px; top: 36px; width: 200px; }
+  #home.partner-site .three-col { height: 0; margin-bottom: 0; }
   header.partner-site { /* Show full-size sections button for now (search is omitted) */ }
   header.partner-site .container { position: relative; }
   header.partner-site .site-name { float: none; font-size: 12px; left: 66px; line-height: 12px; position: absolute; top: 42px; width: 150px; }
