--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -245,6 +245,7 @@ a:visited { color: #666e0b; }
 a:hover { text-decoration: underline; }
 a:active { color: #45ac11; }
 a:not([href]) { color: black; }
+a:not([href]):hover { text-decoration: none; }
 
 *|*:-moz-any-link:active, *|*:-moz-any-link:focus { border: 0; outline: 0; }
 
