--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -165,6 +165,9 @@ a {
     }
     &:not([href]) {
         color: $text-color;
+        &:hover {
+            text-decoration: none;
+        }
     }
 }
 
