--- a/gobotany/site/templates/gobotany/suggest_test.html
+++ b/gobotany/site/templates/gobotany/suggest_test.html
@@ -61,7 +61,7 @@
                     id="id_identification"
                     placeholder="scientific or common name"
                     class="suggest"
-                    data-suggest-url="{% url site-plant-name-suggestions %}?q=%s">
+                    data-suggest-url="{% url 'site-plant-name-suggestions' %}?q=%s">
                 <input type="text" name="title" id="id_title"
                     autocomplete="off"
                     placeholder="title (datalist test)" list="titles">
@@ -85,7 +85,7 @@
                     value="Acer pensylvanicum"
                     placeholder="scientific or common name"
                     class="suggest"
-                    data-suggest-url="{% url site-plant-name-suggestions %}?q=%s">
+                    data-suggest-url="{% url 'site-plant-name-suggestions' %}?q=%s">
                 <input type="text" name="title" id="id_title2"
                         autocomplete="off"
                         placeholder="title (datalist test)" list="titles2">
@@ -115,7 +115,7 @@
                     id="id_identification3"
                     placeholder="scientific or common name"
                     class="suggest"
-                    data-suggest-url="{% url site-plant-name-suggestions %}?q=%s"
+                    data-suggest-url="{% url 'site-plant-name-suggestions' %}?q=%s"
                     data-align-menu-inside-input="true"
                     style="padding-left: 10px; padding-right: 10px;">
                 <input type="text" name="title" id="id_title"
@@ -138,7 +138,7 @@
                 id="search-box"
                 placeholder="Search..."
                 class="suggest"
-                data-suggest-url="{% url site-search-suggestions %}?q=%s"
+                data-suggest-url="{% url 'site-search-suggestions' %}?q=%s"
                 data-submit-on-select="true">
             <button type="submit">Search</button>
         </form>
@@ -151,7 +151,7 @@
                 id="search-box"
                 placeholder="Search..."
                 class="suggest"
-                data-suggest-url="{% url site-search-suggestions %}?q=%s"
+                data-suggest-url="{% url 'site-search-suggestions' %}?q=%s"
                 data-submit-on-select="true">
             <button type="submit">Search</button>
         </form>
